CAMBIOS DE APARIENCIA PROYECTO

--- a/TALLER#3/TALLER#3.vbproj
+++ b/TALLER#3/TALLER#3.vbproj
@@ -10,6 +10,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Montserrat-Medium.ttf" />
+    <None Remove="Montserrat-ThinItalic.ttf" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Import Include="System.Data" />
     <Import Include="System.Drawing" />
     <Import Include="System.Windows.Forms" />
